# radegast-console-backend

./: .containerignore  .gitignore  .gitmodules  .readthedocs.yaml  AGENTS.md  Containerfile  DB_MIGRATION.md  README.md  apply-migrations.py  entrypoint.sh  gen-openapi.py  hatch_build.py  podman-compose.yaml  pyproject.toml
.github/workflows/: ci-cd.yml  ci.yml  pypi-deploy.yml
agent/config/linux/: config.toml  install.sh  radegast-agent.service  rustinel.service  uninstall.sh
agent/config/windows/: config.toml  install-service.py  install.bat
app/: cli.py  config.py  database.py  dependencies.py  main.py  utils.py
app/middleware/: request_logging.py  session.py
app/models/: __init__.py  api_key.py  associations.py  device.py  device_group.py  email_bulk_state.py  exclusion.py  hardware_token.py  key_transfer.py  log.py  pack.py  pack_enabled.py  pack_version.py  pack_version_rule.py  public_key.py  queued_email.py  team.py  team_invitation.py  user.py
app/routers/: admin.py  apikeys.py  auth.py  dashboard.py  devices.py  exclusions.py  groups.py  install.py  logs.py  packs.py  releases.py  teams.py  ui.py  user.py
app/schemas/: apikeys.py  common.py  dashboard.py  device.py  exclusion.py  log.py  pack.py  team.py  user.py
app/services/: auth.py  crypto.py  email.py  logs.py  pack_validation.py  packs.py  permissions.py  rule_lookup.py
docs/: README.rst  conf.py  index.rst  requirements.txt
docs/user-guides/: admin.md  alerts.md  api-keys.md  device-installation.md  devices.md  encryption-keys.md  exclusions.md  groups.md  hunts.md  logs.md  mfa.md  notifications.md  packs.md  platform-overview.md  settings.md  teams.md
migrations/: env.py
migrations/versions/: 13d50945cf19_add_private_key_needs_refresh_to_device_.py  1e8aa1bc30f1_add_ai_analysis_tool_column.py  1f680449869a_add_scheduled_at_to_queued_emails.py  2add51ccb405_e2ee_exclusions.py  31f95b5d53de_rename_alerted_rules_to_pack_version_.py  35083de9af22_add_device_os.py  5f543328be0e_add_alert_id_to_exclusions.py  6456f51f7b88_initial_schema.py  7e7800c8dcd7_add_alerted_rules_and_log_rule_type.py  e588c10e0981_add_encryption_public_key_to_devices.py  f0736504326d_add_exclusion_type_and_excluded_by.py
tests/: conftest.py  integration_test.py  test_admin.py  test_apikeys.py  test_auth.py  test_broadcasts.py  test_cli.py  test_dashboard.py  test_devices.py  test_email_debouncing.py  test_email_worker.py  test_exclusions.py  test_hardware_token_domain.py  test_health.py  test_logs.py  test_mfa.py  test_mfa_required_level.py  test_notifications.py  test_packs.py  test_permissions.py  test_rate_limits.py  test_releases.py  test_request_logging.py  test_teams.py  test_unsubscribe.py
