[project]
name = "radegast-edr-console"
version = "0.1.0"
description = "Backend & WebUI for Radegast - EDR management platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "ssage>=0.1.0",
    "cryptography>=43.0.0",
    "bcrypt>=4.2.0",
    "itsdangerous>=2.1.0",
    "aiosmtplib>=3.0.0",
    "jinja2>=3.1.0",
    "aiofiles>=24.1.0",
    "pyotp>=2.9.0",
    "webauthn>=2.7.1",
    "filelock>=3.29.0",
    "httpx>=0.28.1",
    "pyyaml>=6.0.0",
    "alembic>=1.13.0",
]

[project.scripts]
radegast-edr-console = "app.cli:cli"
radegast-console = "app.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.6.0",
]
docs = [
    "Sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
    "linkify>=1.0.0",
]

[dependency-groups]
dev = [
    "radegast-edr-console[dev]",
    "ruff>=0.15.16",
]
docs = ["radegast-edr-console[docs]"]

[tool.ruff]
line-length = 140
target-version = "py311"
include = ["app/**/*.py", "tests/**/*.py"]
exclude = [".venv", "migrations", "node_modules", "web/"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "FAST", # FastAPI-specific rules
    "ASYNC", # Async best practices
    "S",   # flake8-bandit (security)
    "Q",   # flake8-quotes
    "TID", # flake8-tidy-imports
    "PLE", # Pylint errors
    "PLW", # Pylint warnings
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "S101",  # Use of `assert` detected
    "Q000",  # Single quotes found but double quotes preferred (we use single quotes)
    "FAST002",  # FastAPI dependency without Annotated (temporarily disabled - too many to fix)
    "B008",  # Do not perform function call Depends in argument defaults (temporarily disabled)
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests
"app/config.py" = ["S105", "S108"]  # Allow hardcoded password and temp file in config
"app/main.py" = ["ASYNC240"]  # Allow Path.mkdir in lifespan (startup code)
"app/routers/install.py" = ["ASYNC240"]  # Allow Path.resolve/is_relative_to (synchronous path checks)
"app/services/email.py" = ["S311"]  # Allow random.randint for non-crypto sleep delays
"app/routers/packs.py" = ["S311"]  # Allow random.randint for non-crypto pack_id generation
"app/cli.py" = ["S603", "S607"]  # Allow subprocess calls with shutil.which (trusted commands)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
artifacts = [
  "app/web_build/",
  "app/agent_config/",
]

[tool.hatch.build.targets.sdist]
include = [
  "/app",
  "/web",
  "/agent",
  "/gen-openapi.py",
  "/security.txt",
  "/uv.lock",
]
exclude = [
  "/web/node_modules",
  "/web/.svelte-kit",
  "/web/build",
  "/web/.env",
  "/web/.env*",
  # Exclude frontend test files
  "**/*.test.ts",
  "**/setupTests.ts",
  "**/ModalTestHelper.svelte",
  # Exclude backend tests
  "/tests",
  # Exclude podman and container files
  "/podman-compose.yaml",
  "/Containerfile",
  "/.containerignore",
  "/.dockerignore",
  # Exclude migrations
  "/DB_MIGRATION.md",
]
artifacts = [
  "app/web_build/",
  "app/agent_config/",
]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-n auto --maxprocesses=32"

[tool.uv]
exclude-newer = "24 hours"
